--- a/imax.html
+++ b/imax.html
@@ -43,13 +43,13 @@
 </ul>
 <div class="imax-photos">
   <div class="imax-photo">
-    <img src="imax-2.jpg" width=250px>
+    <img src="imax-2.JPG" width=250px>
   </div>
   <div class="imax-photo">
-    <img src="imax-3.jpg" width=250px>
+    <img src="imax-3.JPG" width=250px>
   </div>
   <div class="imax-photo">
-    <img src="imax-4.jpg" width=250px>
+    <img src="imax-4.JPG" width=250px>
   </div>
 </div>
 </br>
