--- a/resume.html
+++ b/resume.html
@@ -53,12 +53,12 @@
   <h2>EDUCATION</h2>
   </div>
   <div class="content">
-  <b><a href="#"><div class="hvr-fade-yellow-b">University of California, Los Angeles</b>, B.S. Cognitive Science, Specialization in Computing</div></a>
+  <b><a href="https://www.psych.ucla.edu/undergraduate/undergraduate-student-services/majors-minors/cognitive-science-major-for-students-who-entered-ucla-as-freshmen" target="_blank"><div class="hvr-fade-yellow-b">University of California, Los Angeles</b>, B.S. Cognitive Science, Specialization in Computing</div></a>
     <ul>
     <li>Cumulative GPA: 3.8; Dean's Honors List</li>
     <li>Expected graduation date: Jun. 2019</li>
   </ul>
-  <b><a href="#"><div class="hvr-fade-yellow-b">The London School of Economics and Political Science</b>, Strategic Management & Marketing</div></a>
+  <b><a href="www.lse.ac.uk/" target="_blank"><div class="hvr-fade-yellow-b">The London School of Economics and Political Science</b>, Strategic Management & Marketing</div></a>
   <ul>
   <li>Cumulative GPA: 4.0</li>
   <li>UC Education Abroad Program, Summer 2016; 1 of 50 selected students from UCLA</li>
@@ -144,28 +144,30 @@
     <h2>OTHER</h2>
   </div>
   <div class="content">
-    <b><a href="#"><div class="hvr-fade-yellow-b">LA Hacks</b>, Hack Camp Selected Participant (Apr. 2017)</div></a>
+    <b><a href="http://partnership.ucla.edu/consulting-services/" target="_blank"><div class="hvr-fade-yellow-b">Bruin Development Academy: Consulting Services</b>, Selected Participant (Apr. 2017)</div></a>
     <br/><br/>
-    <b><a href="#"><div class="hvr-fade-yellow-b">Accenture Innovation Challenge</b>, Selected Participant (Mar. 2017)</div></a>
+    <b><a href="https://lahacks.com/" target="_blank"><div class="hvr-fade-yellow-b">LA Hacks</b>, Hack Camp Selected Participant (Apr. 2017)</div></a>
+    <br/><br/>
+    <b><a href="https://www.accenture.com/us-en/Careers/innovation-competition" target="_blank"><div class="hvr-fade-yellow-b">Accenture Innovation Challenge</b>, Selected Participant (Mar. 2017)</div></a>
     <ul>
       <li>Worked in a consulting-style team with an Accenture mentor on developing an innovative idea to solve a real-life challenge faced by Habitat for Humanity International (HFHI)</li>
       <li>Pitched idea to Accenture senior leadership on how to improve HFHI's recruitment and retention of millennials </li>
     </ul>
-    <b><a href="#"><div class="hvr-fade-yellow-b">Undergraduate Business Society</b>, Excel & Financial Modeling Workshop Selected Participant (Jan. 2017 - Feb. 2017)</div></a>
+    <b><a href="http://www.uclaubsbruins.com/" target="_blank"><div class="hvr-fade-yellow-b">Undergraduate Business Society</b>, Excel & Financial Modeling Workshop Selected Participant (Jan. 2017 - Feb. 2017)</div></a>
     <ul>
       <li>Participated in series of workshops on Excel functions and shortcuts, basic financial models and accounting principles</li>
     </ul>
-    <b><a href="#"><div class="hvr-fade-yellow-b">Xiaomi</b>, CES 2017 Brand Ambassador Extern (Jan. 2017)</div></a>
+    <b><a href="/website/xiaomi.html"><div class="hvr-fade-yellow-b">Xiaomi</b>, CES 2017 Brand Ambassador Extern (Jan. 2017)</div></a>
     <ul>
       <li>Selected from a competitive pool to be on team of 9 UCLA ambassadors to work Xiaomi's booth at the International Consumer Electronics Show (CES)</li>
       <li>Trained on specifications and details of Xiaomi products to inform CES attendees </li>
     </ul>
-    <b><a href="#"><div class="hvr-fade-yellow-b">Bruin Development Academy: Self Innovation Lab</b>, Selected Participant (Apr. 2016 - May 2016)</div></a>
+    <b><a href="http://partnership.ucla.edu/bruin-development-academy/" target="_blank"><div class="hvr-fade-yellow-b">Bruin Development Academy: Self Innovation Lab</b>, Selected Participant (Apr. 2016 - May 2016)</div></a>
     <ul>
       <li>Selected through competitive application process to participate in series of lectures, workshops and activities instructed by Om Marwah, Forbes 30 Under 30 2015 honoree</li>
       <li>Applied academic concepts to industry problems and explored interdisciplinary uses of technology through weekly lectures by Forbes 30 Under 30 guest speakers </li>
     </ul>
-    <b><a href="#"><div class="hvr-fade-yellow-b">Nectar Streetwear</b>, Co-Founder (2013)</div></a>
+    <b><a href="/website/nectar.html"><div class="hvr-fade-yellow-b">Nectar Streetwear</b>, Co-Founder (2013)</div></a>
     <ul>
       <li>Oversaw end-to-end production and sale of clothing, from creating designs to printing in-house to distributing products</li>
       <li>Spearheaded brand development and online presence through creation of a website and engagement on social media platforms</li>
