--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
   <div id="home_description">
-    <a href="/website/about.html"><h4><b><div class="hvr-fade-yellow"> HI, I'M EMMA.</div><a></b></h4><br/>
+    <a href="/about.html"><h4><b><div class="hvr-fade-yellow"> HI, I'M EMMA.</div><a></b></h4><br/>
     <p><div class="hvr-fade">UCLA. Cognitive Science. Specialization in Computing.</div></p>
     <br/><p><div class="hvr-fade">Interested in business, tech, psychology and art.</div></p>
     <br/>
   </div>
   <div class="hvr-forward">
-      <a href="/website/about.html" id="home_button">SEE MORE</a>
+      <a href="/about.html" id="home_button">SEE MORE</a>
   </div>
   </div>
 
@@ -36,7 +36,7 @@
 
 <!CONTENT>
 <div class = "boxes">
-  <a href="/website/about.html">
+  <a href="/about.html">
   <div class="box">
   <figure class="snip1504">
     <img src="prof-pic-square.JPG">
@@ -48,7 +48,7 @@
 </div>
     </a>
 
-<a href="/website/enrou.html">
+<a href="/enrou.html">
 <div class="box">
 <figure class="snip1504">
   <img src="enrou-team.jpg">
@@ -60,7 +60,7 @@
 </div>
   </a>
   
-<a href="#">
+<a href="/resume.html">
 <div class="box">
 <figure class="snip1504">
   <img src="ucla-seal.jpg">
@@ -72,7 +72,7 @@
 </div>
   </a>
 
-<a href="/website/siemer.html">
+<a href="/siemer.html">
 <div class="box">
 <figure class="snip1504">
   <img src="Siemer-Day-2-003.jpg">
@@ -84,7 +84,7 @@
 </div>
   </a>
   
-<a href="/website/nectar.html">
+<a href="/nectar.html">
 <div class="box">
   <figure class="snip1504">
     <img src="nectar-newspaper.png">
@@ -96,7 +96,7 @@
 </div>
   </a>
 
-  <a href="/website/dsp.html">
+  <a href="/dsp.html">
 <div class="box">
   <figure class="snip1504">
     <img src="MTB-1-square.png">
@@ -108,7 +108,7 @@
 </div>
     </a>
 
-  <a href="/website/imax.html">
+  <a href="/imax.html">
 <div class="box">
 <figure class="snip1504">
   <img src="imax-logo-square.jpg">
@@ -120,7 +120,7 @@
 </div>
  </a>
 
-  <a href="/website/lse.html">
+  <a href="/resume.html">
 <div class="box">
   <figure class="snip1504">
     <img src="lse-logo-square.png">
@@ -132,7 +132,7 @@
 </div>
     </a>
 
-  <a href="/website/utapp.html">
+  <a href="/utapp.html">
 <div class="box">
 <figure class="snip1504">
   <img src="utapp-logo.jpg">
@@ -144,7 +144,7 @@
 </div>
     </a>
 
-  <a href="/website/xiaomi.html">
+  <a href="/xiaomi.html">
 <div class="box">
   <figure class="snip1504">
     <img src="CES-3-square.jpg">
@@ -156,7 +156,7 @@
 </div>
     </a>
 
-  <a href="/website/saa.html">
+  <a href="/saa.html">
 <div class="box">
   <figure class="snip1504">
     <img src="preshies-square.jpg">
@@ -168,7 +168,7 @@
 </div>
     </a>
 
-  <a href="/website/ubs.html">
+  <a href="/ubs.html">
 <div class="box">
   <figure class="snip1504">
     <img src="ubs-cover.png">
@@ -180,7 +180,7 @@
 </div>
     </a>
 
-  <a href="/website/cac.html">
+  <a href="/cac.html">
 <div class="box">
   <figure class="snip1504">
     <img src="cac-cover-square.png">
@@ -204,7 +204,7 @@
 </div>
   </a>
 
-  <a href="/website/creative.html">
+  <a href="/creative.html">
 <div class="box">
 <figure class="snip1504">
   <img src="art-old.jpg">
@@ -215,7 +215,7 @@
 </div>
     </a>
 
-  <a href="/website/creative.html">
+  <a href="/creative.html">
 <div class="box">
   <figure class="snip1504">
     <img src="sf-square.jpg">
