--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
   <html>
   <header>
     <title>Emma Jessica Lin</title>
-    <link href="/website/main.css" rel="stylesheet">
+    <link href="/main.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet'>
   </header>
@@ -12,11 +12,11 @@
   <!HOME PANEL>
     <div class="home_panel">
     <div id="home_header">
-      <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
+      <a href="/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
   </div>
-    <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
-    <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
-    <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
+    <div class="hvr-forward"><a href="/resume.html" id="home_button">RESUME</a></div>
+    <div class="hvr-forward"><a href="/about.html" id="home_button">ABOUT</a></div>
+    <div class="hvr-forward"><a href="/index.html" id="home_button">HOME</a></div>
   </div>
 
   <!CONTACT INFO>
@@ -31,7 +31,7 @@
 
 <!CONTENT>
 <div class="content-title">
-    <a href="/website/about.html"><h1><div class="hvr-fade-2">ABOUT</div></h1></a>
+    <a href="/about.html"><h1><div class="hvr-fade-2">ABOUT</div></h1></a>
 </br>
   <img src="prof-pic-square.JPG" width=250px>
 </br>
@@ -43,22 +43,22 @@ Currently, I'm studying
 and I find the intersection of business and tech fascinating.
 </br>
 </br>
-Most recently, I interned at <a href="/website/imax.html"><div class="hvr-fade-yellow">IMAX Corporation</div></a> and worked within the International Marketing department.
-Before this, I worked at a <a href="/website/enrou.html"><div class="hvr-fade-yellow">socially-responsible e-commerce company</div></a>,
-<a href="/website/siemer.html"><div class="hvr-fade-yellow">a boutique investment banking firm</div></a>
-and an <a href="/website/utapp.html"><div class="hvr-fade-yellow">app start-up</div></a>.
+Most recently, I interned at <a href="/imax.html"><div class="hvr-fade-yellow">IMAX Corporation</div></a> and worked within the International Marketing department.
+Before this, I worked at a <a href="/enrou.html"><div class="hvr-fade-yellow">socially-responsible e-commerce company</div></a>,
+<a href="/siemer.html"><div class="hvr-fade-yellow">a boutique investment banking firm</div></a>
+and an <a href="/utapp.html"><div class="hvr-fade-yellow">app start-up</div></a>.
 </br>
 </br>
 At UCLA, I enjoy involving myself in campus affairs, whether it's through
-an <a href="/website/saa.html"><div class="hvr-fade-yellow">event-based organization dedicated to fostering Bruin spirit</div></a> or
-<a href="/website/ubs.html"><div class="hvr-fade-yellow">business organizations that focus on the professional development of students</div></a>.
+an <a href="/saa.html"><div class="hvr-fade-yellow">event-based organization dedicated to fostering Bruin spirit</div></a> or
+<a href="/ubs.html"><div class="hvr-fade-yellow">business organizations that focus on the professional development of students</div></a>.
 </br>
 </br>
 I'm an <a href="https://www.16personalities.com/isfj-personality"><div class="hvr-fade-yellow">ISFJ</div></a>,
 cheese enthusiast and
 <a href="https://emmajessicalin.yelp.com"><div class="hvr-fade-yellow">Yelper</div></a>.
 In my free time, I love <a href="https://vsco.co/emmajessicalin"><div class="hvr-fade-yellow">taking photos</div></a>,
-<a href="/website/creative.html"><div class="hvr-fade-yellow">drawing</div></a>
+<a href="/creative.html"><div class="hvr-fade-yellow">drawing</div></a>
 and listening to the <a href="https://play.spotify.com/album/1kCHru7uhxBUdzkm4gzRQc"><div class="hvr-fade-yellow">Hamilton soundtrack</div></a>.
 
 </div>
