--- a/saa.html
+++ b/saa.html
@@ -12,11 +12,11 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
-  <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
-  <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
-  <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
+  <div class="hvr-forward"><a href="/resume.html" id="home_button">RESUME</a></div>
+  <div class="hvr-forward"><a href="/about.html" id="home_button">ABOUT</a></div>
+  <div class="hvr-forward"><a href="/index.html" id="home_button">HOME</a></div>
 </div>
 
 <!CONTACT INFO>
@@ -32,7 +32,7 @@
   <div class="content-title">
     <img src="saa-group.jpg" width=100%>
   </br></br>
-      <a href="#"><h1><div class="hvr-fade-2">STUDENT ALUMNI ASSOCIATION</div></h1></a>
+      <a href="/saa.html"><h1><div class="hvr-fade-2">STUDENT ALUMNI ASSOCIATION</div></h1></a>
 </div>
 <div class="content">
   A student volunteer group established in 1984,
