--- a/ubs.html
+++ b/ubs.html
@@ -14,11 +14,11 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
-  <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
-  <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
-  <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
+  <div class="hvr-forward"><a href="/resume.html" id="home_button">RESUME</a></div>
+  <div class="hvr-forward"><a href="/about.html" id="home_button">ABOUT</a></div>
+  <div class="hvr-forward"><a href="/index.html" id="home_button">HOME</a></div>
 </div>
 
 <!CONTACT INFO>
@@ -33,7 +33,7 @@
 <!CONTENT>
 <div class="content-title">
   <img src="ubs-logo.png" width=180px>
-    <a href="/website/dsp.html"><h1><div class="hvr-fade-2">UNDERGRADUATE BUSINESS SOCIETY</div></h1></a>
+    <a href="/dsp.html"><h1><div class="hvr-fade-2">UNDERGRADUATE BUSINESS SOCIETY</div></h1></a>
 </div>
 <div class="content">
   The Undergraduate Business Society (UBS) is the largest student organization at UCLA with an annual membership of more than 5,000 undergraduates.
