--- a/xiaomi.html
+++ b/xiaomi.html
@@ -14,11 +14,11 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
-  <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
-  <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
-  <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
+  <div class="hvr-forward"><a href="/resume.html" id="home_button">RESUME</a></div>
+  <div class="hvr-forward"><a href="/about.html" id="home_button">ABOUT</a></div>
+  <div class="hvr-forward"><a href="/index.html" id="home_button">HOME</a></div>
 </div>
 
 <!CONTACT INFO>
@@ -32,7 +32,7 @@
 
 <!CONTENT>
 <div class="content-title">
-    <a href="#"><h1><div class="hvr-fade-2">XIAOMI AT CES 2017</div></h1></a>
+    <a href="/xiaomi.html"><h1><div class="hvr-fade-2">XIAOMI AT CES 2017</div></h1></a>
     <div class="imax-photos">
       <img src="CES-2.jpg" class="imax-photo" height=260px>
       <img src="CES-3.jpg" class="imax-photo" height=260px>
