--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 </div>
     </a>
 
-  <a href="/website/ask.html">
+  <a href="/ask.html">
 <div class="box">
   <figure class="snip1504">
     <img src="ask-logo.png">
