--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 </div>
     </a>
 
-  <a href="/creative.html">
+  <a href="http://vsco.co/emmajessicalin.html">
 <div class="box">
   <figure class="snip1504">
     <img src="sf-square.jpg">
