--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 <!CONTENT>
 <div class = "boxes">
+  <div class = "grid"> 
   <a href="/about.html">
   <div class="box">
   <figure class="snip1504">
@@ -228,6 +229,7 @@
     </a>
   
 </div>
+  </div>
 </div>
 </div>
 </body>
