--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 </div>
   </a>
 
-  <a href="/creative.html">
+  <a href="https://vsco.co/emmajessicalin">
 <div class="box">
 <figure class="snip1504">
   <img src="art-old.jpg">
@@ -216,7 +216,7 @@
 </div>
     </a>
 
-  <a href="http://vsco.co/emmajessicalin.html">
+  <a href="http://vsco.co/emmajessicalin">
 <div class="box">
   <figure class="snip1504">
     <img src="sf-square.jpg">
