--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
     <a href="http://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
     <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
-  </br><a href="#"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
+  </br><a href="/index.html"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
   </div>
 
 <!CONTENT>
