--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 <!CONTACT INFO>
   <div class="contact-info">
-    <a href="https://www.linkedin.com/in/emmajessicalin"><img src="linkedin-icon.png"></a>
+    <a href="https://www.linkedin.com/in/emmajessicalin" target="_blank"><img src="linkedin-icon.png"></a>
     <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
-    <a href="http://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
-    <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
+    <a href="http://vsco.co/emmajessicalin" target="_blank"> <img src="vsco-icon.png"></a>
+    <a href="https://emmajessicalin.yelp.com" target="_blank"> <img src="yelp-icon.png"></a>
   </br><a href="/index.html"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
   </div>
 
@@ -181,7 +181,7 @@
 </div>
     </a>
 
-  <a href="/cac.html">
+  <a href="/resume.html">
 <div class="box">
   <figure class="snip1504">
     <img src="cac-cover-square.png">
@@ -205,7 +205,7 @@
 </div>
   </a>
 
-  <a href="https://vsco.co/emmajessicalin">
+  <a href="https://vsco.co/emmajessicalin" target="_blank">
 <div class="box">
 <figure class="snip1504">
   <img src="art-old.jpg">
@@ -216,7 +216,7 @@
 </div>
     </a>
 
-  <a href="http://vsco.co/emmajessicalin">
+  <a href="http://vsco.co/emmajessicalin" target="_blank">
 <div class="box">
   <figure class="snip1504">
     <img src="sf-square.jpg">
